--- a/src/components/SecondMenu/index.less
+++ b/src/components/SecondMenu/index.less
@@ -1,3 +1,9 @@
 .qf-components-secondmenu{
-    
+    .menu{
+        width: 160px;
+        height: 100vh;
+        .ant-menu{
+            overflow:hidden;
+        }
+    }
 }
